# flask-marshmallow-apispec-example-web-server

./: .flake8  .gitignore  LICENSE  README.md  build_apispec.py  index.html  pyproject.toml  pytest.ini  run.py
example_web_server/: api.py  schema.py  spec.py  utils.py  wsgi.py
tests/: api_test.py  conftest.py  utils_test.py
